# splinter

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/sintegra/splinter/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SplinterAudioStream.cpp  SplinterAudioStream.h  SplinterJNI.cpp  WaveGenerator.cpp  WaveGenerator.h  const.h
app/src/main/cpp/bridge/: NativeCallback.cpp  NativeCallback.h  SplinterJNI.cpp  jni_utils.cpp  jni_utils.h
app/src/main/cpp/generators/: GenericWave.h  SineWave.h  SquareWave.h  TriangleWave.h
app/src/main/java/com/sintegra/splinter/: MainActivity.kt  SplinterApplication.kt
app/src/main/java/com/sintegra/splinter/data/repository/: AudioRepository.kt
app/src/main/java/com/sintegra/splinter/data/service/: AudioSource.kt  NativeAudioBridge.kt
app/src/main/java/com/sintegra/splinter/model/: Constants.kt  WaveModel.kt
app/src/main/java/com/sintegra/splinter/ui/: MainActivity.kt
app/src/main/java/com/sintegra/splinter/ui/mainscreen/: Cutouts.kt  EditableWaveGraph.kt  MainScreen.kt  SplinterArea.kt  SplinterPointer.kt  WaveGraph.kt  WavePicker.kt
app/src/main/java/com/sintegra/splinter/viewmodel/: MainActivityViewModel.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sintegra/splinter/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
